# notion-gcal-slack

./: .dockerignore  LICENSE  README.md  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
ops/: Dockerfile  cron.sample
specs/001-notion-gcal-sync/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-notion-gcal-sync/checklists/: requirements.md
specs/001-notion-gcal-sync/contracts/: sync-service-contract.md
specs/002-docker-10min-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-docker-10min-loop/checklists/: requirements.md
specs/002-docker-10min-loop/contracts/: runtime-loop-contract.md
src/: config.py  main.py  scheduler.py
src/domain/: models.py  validators.py
src/sync/: calendar_client.py  mapper.py  notion_client.py  orchestrator.py
tests/: conftest.py
tests/contract/: test_runtime_loop_contract.py  test_sync_contract.py
tests/integration/: conftest.py  conftest_loop.py  test_loop_drift_warning.py  test_loop_failure_continue.py  test_loop_interval.py  test_loop_logging.py  test_loop_recovery_rate.py  test_no_reverse_sync.py  test_rate_limit_recovery.py  test_retry_isolation.py  test_signal_shutdown.py  test_sync_create_flow.py  test_sync_latency.py  test_sync_performance.py  test_sync_update_flow.py
tests/unit/: test_calendar_client.py  test_done_prefix.py  test_main.py  test_mapper.py  test_notion_client.py  test_scheduler.py  test_timezone.py
